[package]
name = "blockstream-inspector"
version = "0.1.0"
edition = "2024"
authors = ["Blessing Samuel <dicethedev@gmail.com>"]
description = "BlockStream Inspector — An advanced analytics tool for examining Ethereum block production, propagation timing, transaction ordering, and MEV extraction trends"

[dependencies]
# Ethereum libraries
alloy = { version = "0.6", features = ["full", "node-bindings", "rpc-types-eth"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5.4", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"
chrono = "0.4"
hex = "0.4"
colored = "2.1"
dotenv = "0.15.0"

# Data export
csv = "1.3"
alloy-primitives = "1.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
